--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>Sebastian Campiño</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon"  href="favicon.ico">
+    <link rel="icon"  href="robot_ic.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top-container">
@@ -12,11 +14,47 @@
       <h1>I'm Sebastian</h1>
       <p>a <span class="pro">pro</span>grammer.</p>
       <img class="bottom-cloud" src="images/cloud1.png" alt="cloud-img">
-      <img class="mount" src="images/mountain5.png" alt="mountain-img">
+      <img class="mountain" src="images/mountain5.png" alt="mountain-img">
     </div>
     <div class="middle-container">
+      <div class="profile">
+        <img src="images/Sebastian.png" alt="Sebastian-img">
+        <h2>Hello.</h2>
+        <p>I am a ingenious, curious and dynamic mechatronic engineering student
+          and web developer.  I use my skills to propose ideas and solve problems.
+          My interests are web development, programming, energy technologies and aerospace systems..</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="code" src="images/code.gif" alt="code-imag">
+          <h3>Programming and Development</h3>
+          <p>I like desing an develop webpages and apps, also I like programming
+            in some lenguages like Java, Python, for solve problems and create
+          useful programs.</p>
+        </div>
+        <div class="skill-row">
+          <img class="" src="images/robot.png" alt="">
+          <h3>Mechatronic Engineering</h3>
+          <p>I am a Mechatronic Engineering student passionate for embedded systems
+            AI and mechanic desing.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you love technology and engineering as much I do.</h3>
+        <p>For passionate people for technology and development or people that
+          requires my services we can contact each other for code, talk or work.</p>
+        <a class="btn" href="shcampinof@unal.edu.co">CONTACT ME</a>
+      </div>
     </div>
     <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/sebastian-campi%C3%B1o-figueroa-3b3244181/">LinkedIn</a>
+      <a class="footer-link" href="https://github.com/shcampinof">GitHub</a>
+      <a class="footer-link" href="https://shcampinof.github.io/cv/">Website</a>
+      <p>© 2020 Sesbatian Campiño Figueroa.</p>
     </div>
   </body>
 </html>
