--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud1.png" alt="cloud-img">
       <h1>I'm Sebastian</h1>
-      <p>a <span class="pro">pro</span>grammer.</p>
+      <h2>a <span class="pro">pro</span>grammer.</h2>
       <img class="bottom-cloud" src="images/cloud1.png" alt="cloud-img">
-      <img class="mountain" src="images/mountain5.png" alt="mountain-img">
+      <img src="images/mountain5.png" alt="mountain-img">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="images/Sebastian.png" alt="Sebastian-img">
+        <img class="me" src="images/Sebastian.png" alt="Sebastian-img">
         <h2>Hello.</h2>
         <p>I am a ingenious, curious and dynamic mechatronic engineering student
-          and web developer.  I use my skills to propose ideas and solve problems.
-          My interests are web development, programming, energy technologies and aerospace systems..</p>
+           focused on programming and web development. I use my skills to
+           propose ideas and solve problems. I am also interested in AI, energy
+           technologies and aerospace systems.</p>
       </div>
       <hr>
       <div class="skills">
@@ -35,7 +36,7 @@
           useful programs.</p>
         </div>
         <div class="skill-row">
-          <img class="" src="images/robot.png" alt="">
+          <img class="robot" src="images/robot.png" alt="robot-img">
           <h3>Mechatronic Engineering</h3>
           <p>I am a Mechatronic Engineering student passionate for embedded systems
             AI and mechanic desing.</p>
@@ -47,14 +48,14 @@
         <h3>If you love technology and engineering as much I do.</h3>
         <p>For passionate people for technology and development or people that
           requires my services we can contact each other for code, talk or work.</p>
-        <a class="btn" href="shcampinof@unal.edu.co">CONTACT ME</a>
+        <a class="BUTTON_BHG" href="mailto:shcampinof@unal.edu.co">CONTACT ME</a>
       </div>
     </div>
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/sebastian-campi%C3%B1o-figueroa-3b3244181/">LinkedIn</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/sebastian-campino/">LinkedIn</a>
       <a class="footer-link" href="https://github.com/shcampinof">GitHub</a>
       <a class="footer-link" href="https://shcampinof.github.io/cv/">Website</a>
-      <p>© 2020 Sesbatian Campiño Figueroa.</p>
+      <p class="closing-part">© 2020 Sebastian Campiño Figueroa.</p>
     </div>
   </body>
 </html>
