--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/sebastian-campino/">LinkedIn</a>
       <a class="footer-link" href="https://github.com/shcampinof">GitHub</a>
-      <a class="footer-link" href="https://shcampinof.github.io/cv/">Website</a>
+      <a class="footer-link" href="https://shcampinof.github.io/HTML-CV/">Website</a>
       <p class="closing-part">© 2020 Sebastian Campiño Figueroa.</p>
     </div>
   </body>
